tests/snapshots/integration_tests__detectors@controlled_deploy.cairo.snap
---
source: tests/integration_tests.rs
assertion_line: 23
expression: results
input_file: tests/detectors/controlled_deploy.cairo
---
[
    Result {
        impact: High,
        name: "controlled-deploy",
        confidence: Medium,
        message: "deploy_syscall with user controlled class hash in controlled_deploy::controlled_deploy::DeployContract::bad_direct\n deploy_syscall",
    },
    Result {
        impact: High,
        name: "controlled-deploy",
        confidence: Medium,
        message: "deploy_syscall with user controlled class hash in controlled_deploy::controlled_deploy::DeployContract::do_deploy\n deploy_syscall",
    },
]
