tests/snapshots/integration_tests__detectors@controlled_l1_message.cairo.snap
---
source: tests/integration_tests.rs
expression: results
input_file: tests/detectors/controlled_l1_message.cairo
---
[
    Result {
        impact: Medium,
        name: "controlled-l1-message",
        confidence: Medium,
        message: "send_message_to_l1_syscall with user controlled to_address in controlled_l1_message::controlled_l1_message::L1MessageContract::bad_direct\n send_message_to_l1_syscall (controlled_l1_message.cairo:14)",
        locations: [
            SourceLocation {
                file: "controlled_l1_message.cairo",
                line: 14,
                col: 9,
            },
        ],
    },
    Result {
        impact: Medium,
        name: "controlled-l1-message",
        confidence: Medium,
        message: "send_message_to_l1_syscall with user controlled to_address in controlled_l1_message::controlled_l1_message::L1MessageContract::do_send\n send_message_to_l1_syscall (controlled_l1_message.cairo:27)",
        locations: [
            SourceLocation {
                file: "controlled_l1_message.cairo",
                line: 27,
                col: 9,
            },
        ],
    },
]
