tests/snapshots/integration_tests__detectors@controlled_library_call.cairo.snap
---
source: tests/integration_tests.rs
assertion_line: 23
expression: results
input_file: tests/detectors/controlled_library_call.cairo
---
[
    Result {
        impact: High,
        name: "controlled-library-call",
        confidence: Medium,
        message: "Library call to user controlled class hash in controlled_library_call::controlled_library_call::TestContract::__wrapper__bad1\n library_call_syscall([24], [2], [15], [30], [33]) { fallthrough([34], [35], [36]) 95([37], [38], [39]) }",
    },
    Result {
        impact: High,
        name: "controlled-library-call",
        confidence: Medium,
        message: "Library call to user controlled class hash in controlled_library_call::controlled_library_call::TestContract::__wrapper__bad2\n library_call_syscall([24], [2], [15], [30], [33]) { fallthrough([34], [35], [36]) 235([37], [38], [39]) }",
    },
    Result {
        impact: High,
        name: "controlled-library-call",
        confidence: Medium,
        message: "Library call to user controlled class hash in controlled_library_call::controlled_library_call::TestContract::__wrapper__bad3\n library_call_syscall([24], [2], [15], [30], [33]) { fallthrough([34], [35], [36]) 375([37], [38], [39]) }",
    },
]
