tests/snapshots/integration_tests__detectors@dead_code.cairo.snap
---
source: tests/integration_tests.rs
assertion_line: 23
expression: results
input_file: tests/detectors/dead_code.cairo
---
[
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function dead_code::dead_code::DeadCode::__wrapper__use_add_1 uses the felt252 operation felt252_add([19], [36]) -> ([37]) with the user-controlled parameters: [19], which is not overflow/underflow safe",
    },
]
