tests/snapshots/integration_tests__detectors@felt252_overflow.cairo.snap
---
source: tests/integration_tests.rs
assertion_line: 23
expression: results
input_file: tests/detectors/felt252_overflow.cairo
---
[
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::__wrapper__bad_add_controlled uses the felt252 operation felt252_add([31], [36]) -> ([45]) with the user-controlled parameters: [36], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::__wrapper__bad_add_controlled uses the felt252 operation felt252_add([45], [44]) -> ([46]) with the user-controlled parameters: [45],[44], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::__wrapper__bad_mul_controlled uses the felt252 operation felt252_mul([31], [28]) -> ([32]) with the user-controlled parameters: [31],[28], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::__wrapper__bad_mul_controlled uses the felt252 operation felt252_mul([32], [30]) -> ([35]) with the user-controlled parameters: [32],[30], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::__wrapper__bad_mul_controlled uses the felt252 operation felt252_mul([33], [26]) -> ([34]) with the user-controlled parameters: [33],[26], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::__wrapper__bad_mul_controlled uses the felt252 operation felt252_mul([35], [34]) -> ([36]) with the user-controlled parameters: [35],[34], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::__wrapper__bad_sub_controlled uses the felt252 operation felt252_sub([28], [35]) -> ([36]) with the user-controlled parameters: [35], which is not overflow/underflow safe",
    },
    Result {
        impact: Medium,
        name: "felt252-unsafe-arithmetic",
        confidence: Medium,
        message: "The function felt252_overflow::felt252_overflow::Felt252Overflow::__wrapper__test_sub_assert uses the felt252 operation felt252_sub([18], [32]) -> ([33]) with the user-controlled parameters: [18], which is not overflow/underflow safe",
    },
]
