tests/snapshots/integration_tests__detectors@privileged_write_no_event.cairo.snap
---
source: tests/integration_tests.rs
expression: results
input_file: tests/detectors/privileged_write_no_event.cairo
---
[
    Result {
        impact: Low,
        name: "privileged-write-no-event",
        confidence: Low,
        message: "The caller-gated external function privileged_write_no_event::privileged_write_no_event::PrivilegedWriteNoEvent::__wrapper__bad_set_limit (privileged_write_no_event.cairo:31) writes storage without emitting an event",
        locations: [
            SourceLocation {
                file: "privileged_write_no_event.cairo",
                line: 31,
                col: 5,
            },
        ],
    },
    Result {
        impact: Low,
        name: "privileged-write-no-event",
        confidence: Low,
        message: "The caller-gated external function privileged_write_no_event::privileged_write_no_event::PrivilegedWriteNoEvent::__wrapper__bad_set_limit_indirect (privileged_write_no_event.cairo:39) writes storage without emitting an event",
        locations: [
            SourceLocation {
                file: "privileged_write_no_event.cairo",
                line: 39,
                col: 5,
            },
        ],
    },
]
