tests/snapshots/integration_tests__detectors@read_only_reentrancy.cairo.snap
---
source: tests/integration_tests.rs
assertion_line: 23
expression: results
input_file: tests/detectors/read_only_reentrancy.cairo
---
[
    Result {
        impact: Low,
        name: "reentrancy-benign",
        confidence: Medium,
        message: "Reentrancy in read_only_reentrancy::read_only_reentrancy::TestContract::__wrapper__bad\n\tExternal call call_contract_syscall([5], [2], [15], [25], [28]) { fallthrough([29], [30], [31]) 195([32], [33], [34]) } done in read_only_reentrancy::read_only_reentrancy::TestContract::__wrapper__bad\n\tVariable written after storage_write_syscall([29], [30], [38], [36], [37]) { fallthrough([39], [40]) 186([41], [42], [43]) } in read_only_reentrancy::read_only_reentrancy::TestContract::__wrapper__bad.",
    },
]
